--- a/app/assets/styles/modules/_social-icons.css
+++ b/app/assets/styles/modules/_social-icons.css
@@ -1,11 +1,14 @@
 .social-icons {
-    position: relative;
-    top: 16px;
-    transition: all .5s ease-in-out;
-
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 
     @mixin atSmall {
-        top: 0;
+        position: relative;
+        left: 0;
+        bottom: 0;
+        transform: none;
     }
 
     & li {
@@ -19,10 +22,12 @@
         }
     }
 
-    &--with-margin-left {
-        margin-left: 0;
-        @mixin atLarge {
+    &--with-l-margin {
+        @mixin atMedium {
             margin-left: 5%;
+        }
+        @mixin atMedium {
+            margin-left: 6%;
         }
     }
 
